--- a/Hacka2.ipynb
+++ b/Hacka2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "sns.set()\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from  math import sqrt\n",
     "from sklearn.metrics import mean_squared_log_error"
    ]
@@ -510,135 +511,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1460 entries, 0 to 1459\n",
-      "Data columns (total 81 columns):\n",
-      " #   Column         Non-Null Count  Dtype  \n",
-      "---  ------         --------------  -----  \n",
-      " 0   Id             1460 non-null   int64  \n",
-      " 1   MSSubClass     1460 non-null   int64  \n",
-      " 2   MSZoning       1460 non-null   object \n",
-      " 3   LotFrontage    1201 non-null   float64\n",
-      " 4   LotArea        1460 non-null   int64  \n",
-      " 5   Street         1460 non-null   object \n",
-      " 6   Alley          91 non-null     object \n",
-      " 7   LotShape       1460 non-null   object \n",
-      " 8   LandContour    1460 non-null   object \n",
-      " 9   Utilities      1460 non-null   object \n",
-      " 10  LotConfig      1460 non-null   object \n",
-      " 11  LandSlope      1460 non-null   object \n",
-      " 12  Neighborhood   1460 non-null   object \n",
-      " 13  Condition1     1460 non-null   object \n",
-      " 14  Condition2     1460 non-null   object \n",
-      " 15  BldgType       1460 non-null   object \n",
-      " 16  HouseStyle     1460 non-null   object \n",
-      " 17  OverallQual    1460 non-null   int64  \n",
-      " 18  OverallCond    1460 non-null   int64  \n",
-      " 19  YearBuilt      1460 non-null   int64  \n",
-      " 20  YearRemodAdd   1460 non-null   int64  \n",
-      " 21  RoofStyle      1460 non-null   object \n",
-      " 22  RoofMatl       1460 non-null   object \n",
-      " 23  Exterior1st    1460 non-null   object \n",
-      " 24  Exterior2nd    1460 non-null   object \n",
-      " 25  MasVnrType     1452 non-null   object \n",
-      " 26  MasVnrArea     1452 non-null   float64\n",
-      " 27  ExterQual      1460 non-null   object \n",
-      " 28  ExterCond      1460 non-null   object \n",
-      " 29  Foundation     1460 non-null   object \n",
-      " 30  BsmtQual       1423 non-null   object \n",
-      " 31  BsmtCond       1423 non-null   object \n",
-      " 32  BsmtExposure   1422 non-null   object \n",
-      " 33  BsmtFinType1   1423 non-null   object \n",
-      " 34  BsmtFinSF1     1460 non-null   int64  \n",
-      " 35  BsmtFinType2   1422 non-null   object \n",
-      " 36  BsmtFinSF2     1460 non-null   int64  \n",
-      " 37  BsmtUnfSF      1460 non-null   int64  \n",
-      " 38  TotalBsmtSF    1460 non-null   int64  \n",
-      " 39  Heating        1460 non-null   object \n",
-      " 40  HeatingQC      1460 non-null   object \n",
-      " 41  CentralAir     1460 non-null   object \n",
-      " 42  Electrical     1459 non-null   object \n",
-      " 43  1stFlrSF       1460 non-null   int64  \n",
-      " 44  2ndFlrSF       1460 non-null   int64  \n",
-      " 45  LowQualFinSF   1460 non-null   int64  \n",
-      " 46  GrLivArea      1460 non-null   int64  \n",
-      " 47  BsmtFullBath   1460 non-null   int64  \n",
-      " 48  BsmtHalfBath   1460 non-null   int64  \n",
-      " 49  FullBath       1460 non-null   int64  \n",
-      " 50  HalfBath       1460 non-null   int64  \n",
-      " 51  BedroomAbvGr   1460 non-null   int64  \n",
-      " 52  KitchenAbvGr   1460 non-null   int64  \n",
-      " 53  KitchenQual    1460 non-null   object \n",
-      " 54  TotRmsAbvGrd   1460 non-null   int64  \n",
-      " 55  Functional     1460 non-null   object \n",
-      " 56  Fireplaces     1460 non-null   int64  \n",
-      " 57  FireplaceQu    770 non-null    object \n",
-      " 58  GarageType     1379 non-null   object \n",
-      " 59  GarageYrBlt    1379 non-null   float64\n",
-      " 60  GarageFinish   1379 non-null   object \n",
-      " 61  GarageCars     1460 non-null   int64  \n",
-      " 62  GarageArea     1460 non-null   int64  \n",
-      " 63  GarageQual     1379 non-null   object \n",
-      " 64  GarageCond     1379 non-null   object \n",
-      " 65  PavedDrive     1460 non-null   object \n",
-      " 66  WoodDeckSF     1460 non-null   int64  \n",
-      " 67  OpenPorchSF    1460 non-null   int64  \n",
-      " 68  EnclosedPorch  1460 non-null   int64  \n",
-      " 69  3SsnPorch      1460 non-null   int64  \n",
-      " 70  ScreenPorch    1460 non-null   int64  \n",
-      " 71  PoolArea       1460 non-null   int64  \n",
-      " 72  PoolQC         7 non-null      object \n",
-      " 73  Fence          281 non-null    object \n",
-      " 74  MiscFeature    54 non-null     object \n",
-      " 75  MiscVal        1460 non-null   int64  \n",
-      " 76  MoSold         1460 non-null   int64  \n",
-      " 77  YrSold         1460 non-null   int64  \n",
-      " 78  SaleType       1460 non-null   object \n",
-      " 79  SaleCondition  1460 non-null   object \n",
-      " 80  SalePrice      1460 non-null   int64  \n",
-      "dtypes: float64(3), int64(35), object(43)\n",
-      "memory usage: 924.0+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PoolQC         1453\n",
-       "MiscFeature    1406\n",
-       "Alley          1369\n",
-       "Fence          1179\n",
-       "FireplaceQu     690\n",
-       "               ... \n",
-       "ExterQual         0\n",
-       "Exterior2nd       0\n",
-       "Exterior1st       0\n",
-       "RoofMatl          0\n",
-       "SalePrice         0\n",
-       "Length: 81, dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.isna().sum().sort_values(ascending=False)"
    ]
@@ -790,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -813,6 +697,34 @@
     "\n",
     "RMSLE=sqrt(final)\n",
     "print(RMSLE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Ariel\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Done! Use 'show' commands to display/save.   |██████████| [100%]   00:08 -> (00:00 left)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Report ./report.html was generated! NOTEBOOK/COLAB USERS: the web browser MAY not pop up, regardless, the report IS saved in your notebook/colab files.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sweetviz as sv\n",
+    "report = sv.analyze(df)\n",
+    "report.show_html(\"./report.html\") \n"
    ]
   }
  ],
