--- a/Hacka2.ipynb
+++ b/Hacka2.ipynb
@@ -1022,11 +1022,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt(\"pred_test.csv\", y_train_pred_knn, delimiter=\",\")"
+    "np.savetxt(\"pred_test.csv\", y_train, delimiter=\",\")"
    ]
   }
  ],
